# python_kafka_cc_frauddetection_demo

./: consumer.py  fraud_detection_model.joblib  ml_model.py  pyproject.toml  readme.md  run_consumer.py  run_generator.py  train_initial_model.py  transaction_consumer.py  transaction_generator.py
